--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -11,7 +11,11 @@
 
 <body>
 	<div class="container-fluid">
-		<app-root>Loading...</app-root>
+		<app-root>
+			<div class="up-loader">
+				<div class="loader"></div>
+			</div>
+		</app-root>
 	</div>
 </body>
 
